-Fixed bug regarding shifted pages -added new pages in the sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -540,7 +540,7 @@ ul.sidebar-menu , ul.sidebar-menu li ul.sub{
 
 
 
-ul.sidebar-menu {
+ul.sidebar-menu{
 
     margin-top: 60px;
 
@@ -655,6 +655,7 @@ ul.sidebar-menu li{
     border-bottom: 1px solid #688a7e;
 
 }*/
+
 
 ul.sidebar-menu li.sub-menu{
 
@@ -10056,3 +10057,49 @@ span.customSelect.changed {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 
+@keyframes fadein {
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-moz-keyframes fadein { /* Firefox */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-webkit-keyframes fadein { /* Safari and Chrome */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity:1;
+    }
+}
+@-o-keyframes fadein { /* Opera */
+    from {
+        opacity:0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/*#Reposition_Page {
+    animation: fadein 1s;
+    -moz-animation: fadein 2s; 
+    -webkit-animation: fadein 2s;
+    -o-animation: fadein 2s; 
+}
+#Home_Page {
+    animation: fadein 1s;
+    -moz-animation: fadein 2s; 
+    -webkit-animation: fadein 2s; 
+    -o-animation: fadein 2s; 
+}
+*/
